# RockSync

./: .gitignore  BUILD.md  Example_video_metadata.info.json  README.md  TODO.md  pyproject.toml  rocksync.spec  test.py
.github/workflows/: release.yml
app/: core.py  debug.log.1  logging_utils.py  main.py  rockbox_utils.py  settings.json  settings_store.py  tasks_registry.py  theme.py  theme_loader.py
app/themes/: modern-dark.css  modern-light.css  retro-98.css
app/ui/: app_window.py  daily_mix_pane.py  database_pane.py  device_pane.py  explorer_pane.py  genre_pane.py  manual_chapters_dialog.py  rockbox_configurator.py  rockbox_pane.py  search_pane.py  sync_pane.py  tidal_pane.py  tracks_pane.py  youtube_pane.py
scripts/: _cli_logging.py  auto_title_artist.py  check_rockbox_art.py  covers.py  daily_mix.py  delete_by_genre.py  downsampler.py  embed_resize_no_cover.py  embedd_resize.py  flac2alac.py  inspect_flac.py  lyrics_local.py  m4a2flac.py  order_playlist.py  order_renamer.py  prune_genres.py  read_rockbox_tcd_dynamic.py  relocate_music_paths.py  replace_genre.py  restore_genres.py  rockbox_detector.py  search_genres.py  simple_mb_genres.py  sort_by_artist.py  sync_device_genres.py  tag_genres.py  themes.py  video_downscale.py  windows_recover.py  youtube_organizer.py  yt_browse.py  yt_download.py
user_scripts/: example_hello.py  example_hello.rocksync.json
